# HideAndSeekApp

./: .flutter  .gitignore  LICENSE  README.md  config.yaml  file.json  flutter_launcher_icons.yaml  gen-config.yaml  idea.txt  launch.json  make.sh  point.py  pubspec.yaml  regen.sh  shell.nix  todo.txt
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/bigbrother/: MainActivity.kt
android/app/src/main/kotlin/com/example/jetlag/: MainActivity.kt
countries/: Europees_Nederland  Europees_Nederland.json  test.json
countries/Belgium/subareas/: Région de Bruxelles-Capitale - Brussels Hoofdstedelijk Gewest.json  Vlaanderen.json
countries/Germany/subareas/: Baden-Württemberg.json  Berlin.json  Brandenburg.json  Bremen.json  Hamburg.json  Hessen.json  Mecklenburg-Vorpommern.json  Niedersachsen.json  Rheinland-Pfalz.json  Saarland.json  Sachsen-Anhalt.json  Schleswig-Holstein.json  Thüringen.json
countries/Nederland/: border.json
countries/Nederland/subareas/: Caribisch Nederland.json  Drenthe.json  Flevoland.json  Fryslân.json  Gelderland.json  Groningen.json  Limburg.json  Noord-Brabant.json  Noord-Holland.json  Overijssel.json  Utrecht.json  Zeeland.json  Zuid-Holland.json
countries/Zuid-Holland/: border.json
downloads/: museums.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: Boundary.dart  Location.dart  Map.dart  Maths.dart  Plane.dart  SettingsWidget.dart  ShapeRenderer.dart  choose_boundary.dart  closest_to.dart  constants.dart  country.dart  draw_shape.dart  helper.dart  latlng.dart  location.dart  main.dart  map.dart  map_attribution.dart  map_fun.dart  maths.dart  maths_generated_bindings.dart  menu_bar.dart  new_border.dart  new_border_widget.dart  renderer.dart  scale.dart  settings_widget.dart  shape.dart
lib/MapFun/: circle.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
maths/: CMakeLists.txt  Matrix3.cpp  shell.nix
maths/src/: Constants.cpp  Constants.h  Double.cpp  Double.h  Equations.cpp  Equations.h  Expose.cpp  Expose.h  Line.cpp  Line.h  Matrix3.cpp  Matrix3.h  Plane.cpp  Plane.h  Shape.cpp  Shape.h  Tests.cpp  Tests.h  Vector3.cpp  Vector3.h  main.cpp  maths.cpp  maths.h
newtests/: biggerTest1.json  biggerTest2.json  box.json  boxAroundRijksmuseum.json  boxAroundRijksmuseumSolution.json  boxAroundRijksmuseumSolutionReverse.json  bug.json  circle.json  hexagon.json  intersectSelf.json  intersectSelfEasy.json  intersectSelfNL.json  nl.json  nl2.json  separateSegment.json  sharingASide.json  sharingASide.json.res  this.json  transversely.json  trivial.json  twoHoles.json  weirdShape.json
saves/: save.json
test/: ClosestTo.dart  closest_to.dart  complete_intersections.dart  conversion.dart  fullCircle.dart  full_circle.dart  intermediatePoints.dart  intermediate_points.dart  intersections.dart  planeTest.dart  plane_test.dart  tangent.dart  transversely.dart  widget_test.dart
test/data/: museums.json
tests/: .json  biggerTest1.json  biggerTest2.json  box.json  bug.json  circle.json  hexagon.json  holes.json  intersectSelf.json  intersectSelfEasy.json  intersectSelfNL.json  nl-source.txt  nl.json  nl2.json  notTransversely.json  separateSegment.json  sharingASide.json  this.json  transversely.json  trivial.json  twoHoles.json  weirdShape.json
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
